--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.6]
-        java: [adopt@1.11, graalvm-ce-java11@21.1.0]
+        java: [adopt-hotspot@11.0.15+10, graal_22.1.0@11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -37,10 +37,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v13
+      - name: Setup Java (adopt-hotspot@11.0.15+10)
+        if: matrix.java == 'adopt-hotspot@11.0.15+10'
+        uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          distribution: adopt-hotspot
+          java-version: 11.0.15+10
+
+      - name: Setup GraalVM (graal_22.1.0@11)
+        if: matrix.java == 'graal_22.1.0@11'
+        uses: DeLaGuardo/setup-graalvm@5.0
+        with:
+          graalvm: 22.1.0
+          java: java11
 
       - name: Cache sbt
         uses: actions/cache@v2
@@ -80,7 +89,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.6]
-        java: [adopt@1.11]
+        java: [adopt-hotspot@11.0.15+10]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -88,10 +97,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v13
+      - name: Setup Java (adopt-hotspot@11.0.15+10)
+        if: matrix.java == 'adopt-hotspot@11.0.15+10'
+        uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          distribution: adopt-hotspot
+          java-version: 11.0.15+10
+
+      - name: Setup GraalVM (graal_22.1.0@11)
+        if: matrix.java == 'graal_22.1.0@11'
+        uses: DeLaGuardo/setup-graalvm@5.0
+        with:
+          graalvm: 22.1.0
+          java: java11
 
       - name: Cache sbt
         uses: actions/cache@v2
@@ -131,16 +149,25 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.6]
-        java: [adopt@1.8]
+        java: [temurin@11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (fast)
         uses: actions/checkout@v2
 
-      - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v13
+      - name: Setup Java (adopt-hotspot@11.0.15+10)
+        if: matrix.java == 'adopt-hotspot@11.0.15+10'
+        uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          distribution: adopt-hotspot
+          java-version: 11.0.15+10
+
+      - name: Setup GraalVM (graal_22.1.0@11)
+        if: matrix.java == 'graal_22.1.0@11'
+        uses: DeLaGuardo/setup-graalvm@5.0
+        with:
+          graalvm: 22.1.0
+          java: java11
 
       - name: Common sbt setup
         run: $SBT ++${{ matrix.scala }} transferCommonResources
