--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.8]
-        java: [adopt-hotspot@11.0.15+10, graal_22.1.0@11]
+        java: [temurin@17]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -37,19 +37,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java (adopt-hotspot@11.0.15+10)
-        if: matrix.java == 'adopt-hotspot@11.0.15+10'
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
         uses: actions/setup-java@v2
         with:
-          distribution: adopt-hotspot
-          java-version: 11.0.15+10
-
-      - name: Setup GraalVM (graal_22.1.0@11)
-        if: matrix.java == 'graal_22.1.0@11'
-        uses: DeLaGuardo/setup-graalvm@5.0
-        with:
-          graalvm: 22.1.0
-          java: java11
+          distribution: temurin
+          java-version: 17
 
       - name: Cache sbt
         uses: actions/cache@v2
@@ -89,7 +82,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.13.8]
-        java: [adopt-hotspot@11.0.15+10]
+        java: [temurin@17]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -97,19 +90,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java (adopt-hotspot@11.0.15+10)
-        if: matrix.java == 'adopt-hotspot@11.0.15+10'
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
         uses: actions/setup-java@v2
         with:
-          distribution: adopt-hotspot
-          java-version: 11.0.15+10
-
-      - name: Setup GraalVM (graal_22.1.0@11)
-        if: matrix.java == 'graal_22.1.0@11'
-        uses: DeLaGuardo/setup-graalvm@5.0
-        with:
-          graalvm: 22.1.0
-          java: java11
+          distribution: temurin
+          java-version: 17
 
       - name: Cache sbt
         uses: actions/cache@v2
@@ -157,19 +143,12 @@ jobs:
       - name: Checkout current branch (fast)
         uses: actions/checkout@v2
 
-      - name: Setup Java (adopt-hotspot@11.0.15+10)
-        if: matrix.java == 'adopt-hotspot@11.0.15+10'
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
         uses: actions/setup-java@v2
         with:
-          distribution: adopt-hotspot
-          java-version: 11.0.15+10
-
-      - name: Setup GraalVM (graal_22.1.0@11)
-        if: matrix.java == 'graal_22.1.0@11'
-        uses: DeLaGuardo/setup-graalvm@5.0
-        with:
-          graalvm: 22.1.0
-          java: java11
+          distribution: temurin
+          java-version: 17
 
       - name: Common sbt setup
         run: $SBT ++${{ matrix.scala }} transferCommonResources
